--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.0",
+    "express-session": "^1.18.0",
     "mongoose": "^8.2.2",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
